*eshell*
Welcome to the Emacs shell

~/Clang $ ./a.out 
hell	1
hell   	1
1	1
1    	1
	1
     	1
22222222221	1
22222222221	1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hello	1 jj	1
hello  	1 jj   	1
11111111111	1
11111111111  	1
11111111	1
11111111     	1
	1
     	1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
he	1
he     	1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
he	1

he     	1



	1
   	1




interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
he	1
he     	1
111111111	1
111111111	1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
	1
       	1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1      1
1	1
1    1
1	1
1    1
1	1
1    1
1	1
1    1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1i: 2
      1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1       1
1	1
1     1
1	1
1     1
1	1
1     1
1	1
1     1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1i: 2
       1
1	1
1i: 4
     1
1	1
1i: 4
     1
1	
1i: 4
     
1
1
1	
1i: 5
    
1	1
1i: 3
      1
1	
1i: 4
     
	1
i: 2
       1
1	
1i: 4
     
1	1
1i: 3
      1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1       1
1	1
1     1bbbbbbbbbb
1	1
1     1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1      1
1	1
1    1
1	1
1    1
1	1
1    1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1******1
1	1
1****1
1	1
1****1
1	1
1****1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1******1
1	1
1****1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
12******1
1	1
14****1
1	1
14****1
	1
3*****1
	1
3*****1
		1
3*****1*******1
		1
3*****1*******1
	1
3*****1
		1
3*****1*******1
	1	1
3*****12******1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
			1
1********1********1********1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
	1	1
********1*******1
	1	1
******  1*******1
	1	1
******  1*******1


	1
*****1
	1
******1
	1
******1
	1
******1


	1
*****1






	1
***1




1	1
1***1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
	1
********1
1	1
1******1
	1
*******1
	1
*******1


1	
1******



	1
********1
	1
*******1
	1
*******1



	1
*******1






1	1
1******1
















	1
*******1
1	1
1******1	1
*******1
1	1
1******1	1
*******1
	1	1
******* 1*******1interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
	1	1
********1*******1
	1	1
*******1*******1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
	1	1
********1*******1

interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1	1
1*******1*******1
	1	1
*******1*******1
	1	1
*******1*******1
	1	1
*******1*******1
	1		1
 *******1***************1
1	1
1*****

1	1
1******1
1	1
1******1
1	1
1******1
1	1
1******1
1	1
1******1
1	1
1******1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
1	1
1*******1
1	1
1******1
interrupt
~/Clang $ 
~/Clang $ cc 1.10.c 
1.10.c: In function ‘getab’:
1.10.c:16:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   16 | int main() {
      |            ^
1.10.c:30: error: expected ‘{’ at end of input
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hel	1
hel1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
he	1
he1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
h	1
********1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hw	1
hw*********1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hq 	1
hq *****1
h	1
h*****1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hq	1
hq******1
h	1
h******1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
hq	1
hq******1
h	1
h   ****1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
h	1
h*******1
hq	1
hq  ****1
h	1
h**1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
h	1
h*******1
hq	1
hq******1
hfiew	1
hfiew***1
h	1	1
h*******1***** *1
	1	1
********1*******1
	1	1
********1*******1
h	1	1
h*******1******1
interrupt
~/Clang $ cc 1.10.c 
~/Clang $ ./a.out 
h	1
h*******1
h	1
h*******1
h	1	1
h*******1*******1
h	1	1
h*******1*******1
	1	1
********1*******1
